--- a/index.html
+++ b/index.html
@@ -1,32 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
-    />
 
-    <link rel="icon" href="devchallenges.png" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1,
+  maximum-scale=5" />
 
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
+  <link rel="icon" href="devchallenges.png" />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
+  <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
 
-    <title>Devchallenges</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+
+  <title>Devchallenges</title>
 
   <style>
+    :root {
+      --black: #333333;
+      --text: #4F4F4F;
+    }
+
+    body {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .page-header,
+    .page-footer {
+      height: 25%;
+      width: 100%;
+    }
+
+    .page-body {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .page-image-container {
+      width: 50%;
+      height: 50%;
+    }
+
+    .page-image-container .page-image {
+      width: 100%;
+    }
+
+    .page-info-text-container {
+      width: 50%;
+      border: #333333 solid 2px;
+      height: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+    }
+
+    .page-info-text-container .info-text-title {
+      font-size: 64px;
+      font-family: 'Space Mono', monospace;
+      font-weight: 700;
+    }
+
+    .page-info-text-container .info-text-body {
+      font-size: 24px;
+      font-family: 'Space Mono', monospace;
+      font-weight: 400;
+    }
+
+    .page-info-text-container .info-text-btn {
+      width: 216px;
+      height: 64px;
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: 'Space Mono', monospace;
+      font-weight: 400;
+      background-color: var(--black);
+    }
+
+    /* font-family: 'Space Mono', monospace; */
   </style>
-  </head>
-  <body>
-  
-  </body>
+</head>
+
+<body class="page-not-found">
+  <header class="page-header">
+    <h3>404 NOT FOUND</h3>
+  </header>
+  <div class="page-body">
+    <div class="page-image-container">
+      <img src="Scarecrow.png" alt="" class="page-image">
+    </div>
+    <div class="page-info-text-container">
+      <div class="info-text-title">
+        I have bad news for you
+      </div>
+      <div class="info-text-body">The page you are looking for might be removed or is temporarily unavailable</div>
+      <div class="info-text-btn">Back to homepage</div>
+    </div>
+  </div>
+  <footer class="page-footer"> created by Abraham - Devchallenges</footer>
+</body>
+
 </html>
